lua and suriya-go for moondays

--- a/calendar-marks-planner.tex
+++ b/calendar-marks-planner.tex
@@ -15,19 +15,19 @@
 
 \SetCalendarMarks{5}{%
 % Vesakha Puja
-\draw[gold] node [above right=\markMoonAbove{} and \markMoonRight{} of cal05-\dateVisakhaPuja.north east] {\sn{3}};
+\draw[gold] node [above right=\markMoonAbove{} and \markMoonRight{} of cal05-\dateVesakhaPuja.north east] {\sn{3}};
 }
 
 \SetCalendarMarks{6}{%
 % Ajahn Chah's birthday
-\draw[textbody] node [above right=\markNormalAbove{} and \markNormalRight{} of cal06-\theCalendarYear-06-17.north east] {\sn{4}};
+\draw[textbody] node [above right=\markMoonAbove{} and \markMoonRight{} of cal06-\theCalendarYear-06-17.north east] {\sn{4}};
 }
 
 \SetCalendarMarks{7}{%
 % Asalha Puja
 \draw[gold] node [above right=\markMoonAbove{} and \markMoonRight{} of cal07-\dateAsalhaPuja.north east] {\sn{5}};
 % First day of Vassa
-\draw[textbody] node [above right=\markNormalAbove{} and \markNormalRight{} of cal07-\dateVassaFirstDay.north east] {\sn{6}};
+\draw[textbody] node [above right=\markNormalAbove{} and \markNormalRight{} of cal07-\dateFirstDayOfVassa.north east] {\sn{6}};
 }
 
 \SetCalendarMarks{8}{}
@@ -37,8 +37,6 @@
 \SetCalendarMarks{10}{%
 % Pavarana day
 \draw[gold] node [above right=\markMoonAbove{} and \markMoonRight{} of cal10-\datePavarana.north east] {\sn{7}};
-% Last day of Vassa
-\draw[gold] node [above right=\markMoonAbove{} and \markMoonRight{} of cal10-\dateVassaLastDay.north east] {\sn{8}};
 }
 
 \SetCalendarMarks{11}{}
