--- a/calendar-marks.tex
+++ b/calendar-marks.tex
@@ -15,12 +15,12 @@
 
 \SetCalendarMarks{5}{%
 % Vesakha Puja
-\draw[gold] node [above right=\markMoonAbove{} and \markMoonRight{} of cal05-\dateVisakhaPuja.north east] {*};
+\draw[gold] node [above right=\markMoonAbove{} and \markMoonRight{} of cal05-\dateVesakhaPuja.north east] {*};
 }
 
 \SetCalendarMarks{6}{%
 % Ajahn Chah's birthday
-\draw[textbody] node [above right=\markNormalAbove{} and \markNormalRight{} of cal06-\theCalendarYear-06-17.north east] {*};
+\draw[textbody] node [above right=\markMoonAbove{} and \markMoonRight{} of cal06-\theCalendarYear-06-17.north east] {*};
 }
 
 \SetCalendarMarks{7}{%
@@ -30,7 +30,7 @@
 \node[kite, draw, textbody, fill=textbody,
     scale=0.2,
     kite vertex angles=60,
-    above right=\markKiteAbove{} and \markKiteRight{} of cal07-\dateVassaFirstDay.north east] {};
+    above right=\markKiteAbove{} and \markKiteRight{} of cal07-\dateFirstDayOfVassa.north east] {};
 }
 
 \SetCalendarMarks{8}{}
@@ -40,11 +40,6 @@
 \SetCalendarMarks{10}{%
 % Pavarana day
 \draw[gold] node [above right=\markMoonAbove{} and \markMoonRight{} of cal10-\datePavarana.north east] {*};
-% Last day of Vassa
-\node[kite, draw, textbody, fill=textbody,
-    scale=0.2,
-    kite vertex angles=60,
-    above right=\markKiteAboveSecond{} and \markKiteRightSecond{} of cal010-\dateVassaLastDay.north east] {};
 }
 
 \SetCalendarMarks{11}{}
