--- a/calendar-notes.tex
+++ b/calendar-notes.tex
@@ -1,6 +1,6 @@
 
 \SetCalendarNotes{1}{%
-\s{*}\textit{\noteTextAjChahMemorialDay}
+\s{*}\textit{\textAjahnChahMemorialDay}
 }
 
 \SetCalendarNotes{2}{%
@@ -16,11 +16,11 @@
 }
 
 \SetCalendarNotes{6}{%
-\s{*}\textit{\noteTextAjChahBirthDay}
+\s{*}\textit{\textAjahnChahBirthDay}
 }
 
 \SetCalendarNotes{7}{%
-\s{*}\textit{\textAsalhaPuja}, \raisebox{1.5mm}{\tikz\node[kite, draw, textbody, fill=textbody, scale=0.15, kite vertex angles=60] {};}\hspace*{0.5mm}\textit{\noteTextVassaBegins}
+\s{*}\textit{\textAsalhaPuja}, \raisebox{1.5mm}{\tikz\node[kite, draw, textbody, fill=textbody, scale=0.15, kite vertex angles=60] {};}\hspace*{0.5mm}\textit{\textFirstDayOfVassa}
 }
 
 \SetCalendarNotes{8}{}
