--- a/empty-text.tex
+++ b/empty-text.tex
@@ -13,6 +13,9 @@
 \renewcommand\PostLayoutSettings{%
 }% \PostLayoutSettings
 
+\renewcommand\TextKeys{%
+}% \TextKeys
+
 %% ===========
 %% Frontmatter
 %% ===========
