--- a/wall_main.tex
+++ b/wall_main.tex
@@ -1,7 +1,9 @@
 \documentclass[
   language=english,
-  year=2016,
-  altYear=2559,
+  year=2017,
+  altYear=2560,
+  %showtrims,
+  %varnishmask,
   11pt,
   paperheight=250.5mm,
   paperwidth=170.5mm,
@@ -14,8 +16,6 @@
   mainFontFamily=Shaker Pali Regular,
   italicFontFamily=Shaker Pali Italic,
   boldFontFamily=Shaker 2 Bold,
-  %showtrims,
-  %varnishmask,
 ]{wallcalendar}
 
 \makeatletter
@@ -74,6 +74,7 @@
 
 \newpage
 
+% TODO: can we do sth to not need two passes for the position to settle?
 \ThumbsPage
 
 % === Addresses =======================================================
