--- a/calendar-layout.sty
+++ b/calendar-layout.sty
@@ -1,87 +1,53 @@
 \ProvidesPackage{calendar-layout}
 
-% Define Moondays
-
-\renewcommand\ifDateNewMoon{%
-  \ifdate{
-    equals=2016-01-08,
-    equals=2016-02-07,
-    equals=2016-03-07,
-    equals=2016-04-06,
-    equals=2016-05-05,
-    equals=2016-06-04,
-    equals=2016-07-04,
-    equals=2016-08-03,
-    equals=2016-09-01,
-    equals=2016-10-01,
-    equals=2016-10-30,
-    equals=2016-11-29,
-    equals=2016-12-28,
-  }{\putMoon{1}}{};%
-}
-
-\renewcommand\ifDateWaxingMoon{%
-  \ifdate{
-    equals=2016-01-16,
-    equals=2016-02-15,
-    equals=2016-03-15,
-    equals=2016-04-14,
-    equals=2016-05-13,
-    equals=2016-06-12,
-    equals=2016-07-12,
-    equals=2016-08-11,
-    equals=2016-09-09,
-    equals=2016-10-09,
-    equals=2016-11-07,
-    equals=2016-12-07,
-  }{\putMoon{2}}{};%
-}
-
-\renewcommand\ifDateFullMoon{%
-  \ifdate{
-    equals=2016-01-23,
-    equals=2016-02-22, % magha
-    equals=2016-03-22,
-    equals=2016-04-21,
-    equals=2016-05-20, % visakha
-    equals=2016-06-19,
-    equals=2016-07-19, % asalha
-    equals=2016-08-18,
-    equals=2016-09-16,
-    equals=2016-10-16, % assayuja
-    equals=2016-11-14,
-    equals=2016-12-14,
-  }{\putMoon{3}}{};%
-}
-
-\renewcommand\ifDateWaningMoon{%
-  \ifdate{
-    equals=2016-01-02,
-    equals=2016-01-31,
-    equals=2016-03-01,
-    equals=2016-03-30,
-    equals=2016-04-29,
-    equals=2016-05-28,
-    equals=2016-06-27,
-    equals=2016-07-27,
-    equals=2016-08-26,
-    equals=2016-09-24,
-    equals=2016-10-24,
-    equals=2016-11-22,
-    equals=2016-12-22,
-  }{\putMoon{4}}{};%
-}
-
 \graphicspath{{\photosDir},{\thumbsDir},{./src-images/cutouts/},{./src-images/jpg/}}
 
 \newcommand\PreLayoutSettings{}
 \newcommand\PostLayoutSettings{}
-
+\newcommand\TextKeys{}
 \newcommand\FrontMatterText{}
 \newcommand\SetAllQuotes{}
 \newcommand\SetAllPhotoCaptions{}
 
+\newlength\markNormalAbove
+\newlength\markNormalRight
+\newlength\markMoonAbove
+\newlength\markMoonRight
+\newlength\markKiteAbove
+\newlength\markKiteRight
+
+\newcommand\calendarTitleText{}
+
+\newcommand\branchMonasteries{}
+\newcommand\westernDisciplesOfAjahnChah{}
+\newcommand\portalPageWorldWide{}
+
+\newcommand\textAjahnChahMemorialDay{}
+\newcommand\textAjahnChahBirthDay{}
+\newcommand\textVassaBegins{}
+\newcommand\textFirstDayOfVassa{}
+\newcommand\textLastDayOfVassa{}
+
+\newcommand\textMaghaPuja{}
+\newcommand\textVesakhaPuja{}
+\newcommand\textAsalhaPuja{}
+\newcommand\textPavarana{}
+
+\newcommand\textUnitedKingdom{}
+\newcommand\textSwitzerland{}
+\newcommand\textThailand{}
+\newcommand\textAustralia{}
+\newcommand\textNewZealand{}
+\newcommand\textUnitedStates{}
+\newcommand\textItaly{}
+\newcommand\textCanada{}
+
 \input{./\theCalendarLanguage-text.tex}
+
+\TextKeys
+
+\usepackage{luacode}
+\directlua{dofile("./scripts/calendar-preamble.lua")}
 
 \PreLayoutSettings
 
@@ -106,40 +72,29 @@
 
 \newcommand\spacedcdot{\hspace{0.3em}$\cdot$\hspace{0.3em}}
 
-\newlength\markNormalAbove
-\newlength\markNormalRight
-\newlength\markMoonAbove
-\newlength\markMoonRight
-\newlength\markKiteAbove
-\newlength\markKiteRight
-
-\newcommand\calendarTitleText{}
-\newcommand\noteTextAjChahMemorialDay{}
-\newcommand\noteTextAjChahBirthDay{}
-\newcommand\noteTextVassaBegins{}
-
-\newcommand\branchMonasteries{}
-\newcommand\westernDisciplesOfAjahnChah{}
-\newcommand\portalPageWorldWide{}
-
-\newcommand\textMaghaPuja{}
-\newcommand\textVesakhaPuja{}
-\newcommand\textAsalhaPuja{}
-\newcommand\textPavarana{}
-
-\newcommand\textUnitedKingdom{}
-\newcommand\textSwitzerland{}
-\newcommand\textThailand{}
-\newcommand\textAustralia{}
-\newcommand\textNewZealand{}
-\newcommand\textUnitedStates{}
-\newcommand\textItaly{}
-\newcommand\textCanada{}
-
 \input{./photos.tex}
 \input{./thumbs.tex}
+
+% TODO: do lua ==================
+
 \input{./calendar-marks.tex}
 \input{./calendar-notes.tex}
+
+\newlength\tmpSpc
+\setlength{\tmpSpc}{3pt}
+
+\renewcommand\plannerNotes{
+{\small
+\s{1}\textit{\textAjahnChahMemorialDay},\hspace{\tmpSpc}
+\s{2}\textit{\textMaghaPuja},\hspace{\tmpSpc}
+\s{3}\textit{\textVesakhaPuja},\\
+\s{4}\textit{\textAjahnChahBirthDay},\hspace{\tmpSpc}
+\s{5}\textit{\textAsalhaPuja},\hspace{\tmpSpc}
+\s{6}\textit{\textFirstDayOfVassa},\hspace{\tmpSpc}
+\s{7}\textit{\textPavarana}
+}}
+
+% TODO =======================
 
 \SetAllQuotes
 \SetAllPhotoCaptions
@@ -213,20 +168,6 @@
 \setlength\markMoonAbove{-3mm}%
 \setlength\markMoonRight{-0.9mm}%
 }
-
-\newlength\tmpSpc
-\setlength{\tmpSpc}{3pt}
-
-\renewcommand\plannerNotes{
-{\small
-\s{1}\textit{\noteTextAjChahMemorialDay},\hspace{\tmpSpc}
-\s{2}\textit{\textMaghaPuja},\hspace{\tmpSpc}
-\s{3}\textit{\textVesakhaPuja},\\
-\s{4}\textit{\noteTextAjChahBirthDay},\hspace{\tmpSpc}
-\s{5}\textit{\textAsalhaPuja},\hspace{\tmpSpc}
-\s{6}\textit{\noteTextVassaBegins},\hspace{\tmpSpc}
-\s{7}\textit{\textPavarana}
-}}
 
 \PostLayoutSettings
 
