--- a/planner_main_a4.tex
+++ b/planner_main_a4.tex
@@ -1,30 +1,19 @@
 \documentclass[11pt,a4paper,oneside,final]{memoir}
 
-\makeatletter
-
-\usepackage{calc}
-
-\usepackage{geometry}
-\geometry{
-  paper=a4paper,
-  landscape,
-  vmargin=7mm,
-  hmargin=7mm,
-}
-
-\setstocksize{210mm}{297mm}
-
-\setlength{\parindent}{0pt}
-
 \usepackage{layout_planner}
 
-\makeatother
+%\renewcommand{\kathinaMarks}{%
+%\draw[textbody] node [above right=-3mm and -1.5mm of cal-\theCalendarYear-10-12.north east] {\datefnsize 8,9,10};
+%\draw[textbody] node [above right=-3mm and -1.5mm of cal-\theCalendarYear-10-19.north east] {\datefnsize 11};
+%\draw[textbody] node [above right=-3mm and -1.5mm of cal-\theCalendarYear-10-26.north east] {\datefnsize 12};
+%\draw[textbody] node [above right=-3mm and -1.5mm of cal-\theCalendarYear-11-02.north east] {\datefnsize 13};
+%}
 
 \begin{document}
 
 {\centering%
 \monthFont\monthlabelsize\color{gold}%
-\textbf{Forest Sangha Calendar 2016 - 2559}
+\textbf{Forest Sangha Calendar \theCalendarYear\ - \theCalendarAltYear}
 \par}
 
 \vspace*{3mm}
@@ -32,25 +21,9 @@
 \raggedright
 
 \begin{tikzpicture}
-\calendar (cal) [dates=2016-01-01 to 2016-12-31, planner] \moondays;
-
-\draw[textbody] node [above right=-3mm and -1.5mm of cal-\theCalendarYear-01-16.north east] {\datefnsize 1};% Ajahn Chah Memorial Day
-\draw[textbody] node [above right=-3mm and -1.5mm of cal-\dateMaghaPuja.north east] {\datefnsize 2};% Māgha Pūjā
-\draw[textbody] node [above right=-3mm and -1.5mm of cal-\dateVesakhaPuja.north east] {\datefnsize 3};% Vesākha Pūjā
-\draw[textbody] node [above right=-3mm and -1.5mm of cal-\theCalendarYear-06-17.north east] {\datefnsize 4};% Ajahn Chah's Birthday
-% Adhikavara year
-\draw[textbody] node [above right=-3mm and -1.5mm of cal-\dateAsalhaPuja.north east] {\datefnsize 5};% Āsāḷhā Pūjā
-\draw[textbody] node [above right=-2mm and -1.5mm of cal-\dateVassaFirstDay.north east] {\datefnsize 6};% First day of Vassa
-\draw[textbody] node [above right=-3mm and -1.5mm of cal-\datePavarana.north east] {\datefnsize 7};% Pavāraṇā
-\draw[textbody] node [above right=-3mm and -1.5mm of cal-\dateVassaLastDay.north east] {\datefnsize 8};% Last Day of Vassa
-
-% Kathina dates:
-\draw[textbody] node [above right=-3mm and -1.5mm of cal-\theCalendarYear-10-12.north east] {\datefnsize 9,10,11};
-\draw[textbody] node [above right=-3mm and -1.5mm of cal-\theCalendarYear-10-19.north east] {\datefnsize 12};
-\draw[textbody] node [above right=-3mm and -1.5mm of cal-\theCalendarYear-10-26.north east] {\datefnsize 13};
-\draw[textbody] node [above right=-3mm and -1.5mm of cal-\theCalendarYear-11-02.north east] {\datefnsize 14};
-
-\astromoondays;
+\moondaysCalendar
+\eventMarks
+\kathinaMarks
 \end{tikzpicture}
 
 \vfill
@@ -58,61 +31,37 @@
 \begin{tabular}{p{5cm} p{5cm} p{5cm} p{5cm}}
 
 \parbox[t][16mm][t]{5cm}{\raggedright\bottomlabelsize
-\s{1} Jan 16: \textit{Ajahn Chah Memorial Day}\linebreak
-\s{2} Feb 22: \textit{Māgha Pūjā}\linebreak
-\s{3} May 20: \textit{Vesākha Pūjā}\linebreak
-\s{4} Jun 17: \textit{Ajahn Chah's Birthday}
+\s{1} \dateTextAjahnChahMemorialDay: \textit{\textAjahnChahMemorialDay}\linebreak
+\s{2} \dateTextMaghaPuja: \textit{\textMaghaPuja}\linebreak
+\s{3} \dateTextVesakhaPuja: \textit{\textVesakhaPuja}\linebreak
+\s{4} \dateTextAjahnChahBirthDay: \textit{\textAjahnChahBirthDay}
 } &
 
 \parbox[t][16mm][t]{5cm}{\raggedright\bottomlabelsize
-\s{5} July 19: \textit{Āsāḷhā Pūjā}\linebreak
-\s{6} July 20: \textit{First Day of Vassa}\linebreak
-\s{7} Oct 16: \textit{Pavāraṇā}
-\s{8} Oct 16: \textit{Last Day of Vassa}
+\s{5} \dateTextAsalhaPuja: \textit{\textAsalhaPuja}\linebreak
+\s{6} \dateTextFirstDayOfVassa: \textit{\textFirstDayOfVassa}\linebreak
+\s{7} \dateTextPavarana: \textit{\textPavarana}
 } &
 
-\parbox[t][16mm][t]{5cm}{\raggedright\bottomlabelsize
-Robe offering ceremonies:\linebreak
-\s{9} Oct 12: \textit{Dhammapala}\linebreak
-\s{10} Oct 12: \textit{Hartridge}\linebreak
-\s{11} Oct 12: \textit{Santacittarama}
-} &
-
-\parbox[t][16mm][t]{5cm}{\raggedright\bottomlabelsize
-\s{12} Oct 19: \textit{Aruna Ratanagiri}\linebreak
-\s{13} Oct 26: \textit{Cittaviveka}\linebreak
-\s{14} Nov 2: \textit{Amaravati}
-} \\
+% TODO: add Kathina dates
+%\parbox[t][16mm][t]{5cm}{\raggedright\bottomlabelsize
+%Robe offering ceremonies:\linebreak
+%\s{8} Oct 12: \textit{Dhammapala}\linebreak
+%\s{9} Oct 12: \textit{Hartridge}\linebreak
+%\s{10} Oct 12: \textit{Santacittarama}
+%} &
+%
+%\parbox[t][16mm][t]{5cm}{\raggedright\bottomlabelsize
+%\s{11} Oct 19: \textit{Aruna Ratanagiri}\linebreak
+%\s{12} Oct 26: \textit{Cittaviveka}\linebreak
+%\s{13} Nov 2: \textit{Amaravati}
+%} \\
 
 \end{tabular}
 
-\AddToShipoutPictureFG*{\put(\LenToUnit{230mm},\LenToUnit{9mm})%
-{\begin{minipage}[b]{60mm}%
-\begin{tikzpicture}%
-\calendar (keycal) [dates=2014-07-04 to 2014-07-05, planner] if (equals=2014-07-04) [day text=\MyMoon{2}];
-\draw [gold] node (astro) [below right=-3mm and -1.5mm of keycal-2014-07-05.south east] {\MyAstroMoon{2}};
-\draw [textbody] node (event) [above right=-3mm and -1.5mm of keycal-2014-07-04.north east] {\datefnsize 3};
-\node (daynote) [black, left=5mm of keycal-2014-07-04.west] {\bottomlabelsize moon day, traditional};
-\node (astronote) [black, below left=1mm and 0mm of astro.south west] {\bottomlabelsize moon phase, astronomical};
-\node (eventnote) [black, above right=0mm and 0mm of event.north east] {\bottomlabelsize event note};
-\draw [black!50] (astronote) -- (astro);
-\draw [black!50] (daynote) -- (keycal-2014-07-04.west);
-\draw [black!50] (eventnote) -- (event);
-\end{tikzpicture}%
+\moonLegendKey{230mm}{9mm}
 
-{\bottomlabelsize Download from {\color{gold}\underline{\textcolor[gray]{0.3}{www.forestsangha.org/calendar}}}}
-
-\end{minipage}%
-}}%
-
-% PREVIEW
-% \AddToShipoutPictureBG*{\put(0,0)%
-% {\begin{minipage}[b][\paperheight][c]{\paperwidth}%
-% \centering
-% \rotatebox{-45}{\resizebox{15cm}{!}{\color[gray]{0.9} PREVIEW}}
-% \par
-% \end{minipage}%
-% }}%
+%\previewWatermark
 
 \end{document}
 
